Add comments index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="">
 
 <head>
+  <!-- Start head part -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title></title>
@@ -11,9 +12,22 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
+  <!--
+  ############## Place favicon.ico in the root directory ###############
+  -->
 
+
+  <!--
+  ############## Place external ressources ###############
+  -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+
+  <!--
+  ############## Place css ###############
+  -->
+
+  <!-- End head part -->
 </head>
 
 <body>
@@ -21,9 +35,58 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+
+<!--
+###################################################################################################
+                      Add your site or application content here
+###################################################################################################
+-->
+
+
+
+<!-- ############## Start Header part ############### -->
+
+
+    <!-- ############## Insert Logo, banner or title ############### -->
+
+
+    <!-- ############## Insert Navigation ############### -->
+
+
+<!-- ############## End Header part ############### -->
+
+
+
+<!-- ############## Start Main part ############### -->
+
+
+    <!-- ############## Start Aside part ############### -->
+
+
+    <!-- ############## End Aside part ############### -->
+
+
+        <!-- ############## Bienvenue ############### -->
+
+
+<!-- ############## End Main part ############### -->
+
+
+
+<!-- ############## Start Footer part ############### -->
+
+
+
+<!-- ############## End Footer part ############### -->
+
+
+
+<!--
+###################################################################################################
+                      End of your site or application content here
+###################################################################################################
+-->
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
