Add comments main.css

--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
             Famiflora est ouvert 7 jours sur 7!</p>
         </section>
         <section>
-          <article>  </article>
-          <article>  </article>
-          <article>  </article>
-          <article>  </article>
+          <article><a href="produits.html"><img src="img/salon-anthracite.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/piscine-bois-gm.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/abri-europa.jpg" alt=""></a></article>
         </section>
         <section>
           <article>  </article>
@@ -104,11 +103,8 @@
           <article>  </article>
           <article>  </article>
           <article>  </article>
-          <article>  </article>
         </section>
         <section>
-          <article>  </article>
-          <article>  </article>
           <article>  </article>
           <article>  </article>
         </section>
