Add products index.html

--- a/index.html
+++ b/index.html
@@ -89,24 +89,27 @@
             Famiflora est ouvert 7 jours sur 7!</p>
         </section>
         <section>
-          <article><a href="produits.html"><img src="img/salon-anthracite.jpg" alt=""></a></article>
-          <article><a href="produits.html"><img src="img/piscine-bois-gm.jpg" alt=""></a></article>
-          <article><a href="produits.html"><img src="img/abri-europa.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/salons/salon-anthracite.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/salons/salon-isa.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/salons/canape-palmbeach.jpg" alt=""></a></article>
         </section>
+
         <section>
-          <article>  </article>
-          <article>  </article>
-          <article>  </article>
-          <article>  </article>
+          <article><a href="produits.html"><img src="img/abri/abri-europa.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/abri/armoire-helka.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/abri/kiosque-villaverde.jpg" alt=""></a></article>
         </section>
+
         <section>
-          <article>  </article>
-          <article>  </article>
-          <article>  </article>
+          <article><a href="produits.html"><img src="img/piscine/piscine-horsol-bois.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/piscine/piscine-bois-gm.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/spa/tente-spa.jpg" alt=""></a></article>
         </section>
+
         <section>
-          <article>  </article>
-          <article>  </article>
+          <article><a href="produits.html"><img src="img/fontaine/fontaine-arezzo.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/fontaine/fontaine-galia.jpg" alt=""></a></article>
+          <article><a href="produits.html"><img src="img/deco/pergola-florence.jpg" alt=""></a></article>
         </section>
 
   </main>
