--- a/index.html
+++ b/index.html
@@ -82,12 +82,16 @@
           <img src="img/logo.png" alt="">
         </aside>
         <section>
-          <p>Avec plus de 25000m², Famiflora à Mouscron est le plus grand centre de jardinage et de décoration de Belgique.
-            <br><br>
-            Vous y trouverez le plus grand choix de fleurs et de plantes et les plus belles décorations saisonnières :
-            le tout dans la meilleure qualité et à petit prix. En plus de l’univers jardinage et décoration vous trouverez également un vaste univers animalier.
-            Famiflora est ouvert 7 jours sur 7!</p>
+          <p>Avec plus de 2500m², Univers Jardin est la plus grande jardinerie et de décoration de Sainte-Maxime.<br>
+            <br>
+            Vous y trouverez le plus grand choix de mobilier, piscine, SPA, décorations et aménagements pour votre jardin.<br>
+            La meilleure qualité et à tous les prix afin de satisfaire toutes les budgets.</p>
         </section>
+
+        <section>
+          <video width="800" height="450" src="video/univers-jardin.mp4" muted autoplay loop poster="posterimage.jpg"></video>
+        </section>
+        
         <section>
           <article><a href="produits.html"><img src="img/salons/salon-anthracite.jpg" alt=""></a></article>
           <article><a href="produits.html"><img src="img/salons/salon-isa.jpg" alt=""></a></article>
