Add form contact.html

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,16 @@
 <!-- ############## Start Main part ############### -->
   <main>
 
-    <!-- ############## contact ############### -->
+    <!-- ############## contact formulaire ############### -->
+
+    <section>
+      <form class="contact" action="index.html" method="post">
+        Votre nom:<br><input type="text" name="Votre nom" value=""><br>
+        Votre Email:<br> <input type="email" name="Email" value=""><br>
+        Votre message :<br> <textarea name="message" rows="8" cols="80"></textarea><br>
+        <input type="submit" value="Envoyer">
+      </form>
+    </section>
 
     <!-- ############## map ############### -->
     <section>
