add media querie for index.html

--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,6 @@
 <!-- ############## Start Header part ############### -->
   <header>
 
-
-    <!-- ############## Insert Logo, banner or title ############### -->
-
-
     <!-- ############## Insert Navigation ############### -->
     <nav>
       <ul>
@@ -63,7 +59,7 @@
         <li><a href="contact.html">Informations & Contact</a></li>
       </ul>
       <aside class="">
-        <input type="text" name="q" id="search-input"> <img src="img/magnifier.png" alt="search">
+        <input type="text" name="q" id="search-input" value="Rechercher"> <img src="img/magnifier.png" alt="search">
       </aside>
     </nav>
 
@@ -99,8 +95,24 @@
 
 <!-- ############## Start Footer part ############### -->
   <footer>
+    <section>
+      <h3>CONTACT</h3>
+    <p>Rue Jules Vantieghem 14
+      B-7711 Mouscron
+      +32 56 33 66 00
+      info@famiflora.be
+      BE 0845.509.606</p>
+    </section>
 
+    <section>
+      <h3>HEURES D'OUVERTURE</h3>
+      <p>Ouvert du lundi au samedi <br>
+      de 09h00 à 19h00</p>
+    </section>
 
+    <div class="">
+      <img src="img/cb.jpg" alt=""> <img src="img/mastercard.jpg" alt=""> <img src="img/visa.jpg" alt="">
+    </div>
   </footer>
 <!-- ############## End Footer part ############### -->
 
