--- a/produits.html
+++ b/produits.html
@@ -48,10 +48,6 @@
 <!-- ############## Start Header part ############### -->
   <header>
 
-
-    <!-- ############## Insert Logo, banner or title ############### -->
-
-
     <!-- ############## Insert Navigation ############### -->
     <nav>
       <ul>
@@ -77,6 +73,33 @@
 
     <!-- ############## Bienvenue ############### -->
 
+    <section>
+      <h2>Salons de jardin</h2>
+      <article><a href="produits.html"><img src="img/salons/salon-anthracite.jpg" alt=""></a></article>
+      <article><a href="produits.html"><img src="img/salons/salon-isa.jpg" alt=""></a></article>
+      <article><a href="produits.html"><img src="img/salons/canape-palmbeach.jpg" alt=""></a></article>
+    </section>
+
+    <section>
+      <h2>Abris de jardin</h2>
+      <article><a href="produits.html"><img src="img/abri/abri-europa.jpg" alt=""></a></article>
+      <article><a href="produits.html"><img src="img/abri/armoire-helka.jpg" alt=""></a></article>
+      <article><a href="produits.html"><img src="img/abri/kiosque-villaverde.jpg" alt=""></a></article>
+    </section>
+
+    <section>
+      <h2>Les piscines & SPA</h2>
+      <article><a href="produits.html"><img src="img/piscine/piscine-horsol-bois.jpg" alt=""></a></article>
+      <article><a href="produits.html"><img src="img/piscine/piscine-bois-gm.jpg" alt=""></a></article>
+      <article><a href="produits.html"><img src="img/spa/tente-spa.jpg" alt=""></a></article>
+    </section>
+
+    <section>
+      <h2>Fontaines & décorations</h2>
+      <article><a href="produits.html"><img src="img/fontaine/fontaine-arezzo.jpg" alt=""></a></article>
+      <article><a href="produits.html"><img src="img/fontaine/fontaine-galia.jpg" alt=""></a></article>
+      <article><a href="produits.html"><img src="img/deco/pergola-florence.jpg" alt=""></a></article>
+    </section>
 
 
   </main>
@@ -86,8 +109,24 @@
 
 <!-- ############## Start Footer part ############### -->
   <footer>
+    <section>
+      <h3>CONTACT</h3>
+    <p>Rue Jules Vantieghem 14
+      B-7711 Mouscron
+      +32 56 33 66 00
+      info@famiflora.be
+      BE 0845.509.606</p>
+    </section>
 
+    <section>
+      <h3>HEURES D'OUVERTURE</h3>
+      <p>Ouvert du lundi au samedi <br>
+      de 09h00 à 19h00</p>
+    </section>
 
+    <div class="">
+      <img src="img/cb.jpg" alt=""> <img src="img/mastercard.jpg" alt=""> <img src="img/visa.jpg" alt="">
+    </div>
   </footer>
 <!-- ############## End Footer part ############### -->
 
