--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 <!-- ############## Start Header part ############### -->
   <header>
     <!-- ############## Insert Navigation mobile ############### -->
+    <h1>Univers Jardin</h1>
+
     <nav class="flex" id="NavMobile">
-      <img class="icon" src="img/burger.png" alt="">
+      <img class="icon burger" src="img/burger.png" alt="">
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="produits.html">Mobilier</a></li>
@@ -63,7 +65,6 @@
       </aside>
     </nav>
     <!-- ############## Insert title ############### -->
-    <h1>Univers Jardin</h1>
 
     <!-- ############## Insert Navigation regular ############### -->
     <nav id="NavRegular">
@@ -89,26 +90,41 @@
   <main>
 
     <!-- ############## Bienvenue ############### -->
-
-        <!-- ############## Bienvenue ############### -->
-        <aside class="regular">
-          <img src="img/logo.png" alt="">
-        </aside>
         <section>
-          <p>Avec plus de 2500m², Univers Jardin est la plus grande jardinerie et de décoration de Sainte-Maxime.<br>
+          <div>
+            <aside>
+            <img class="logo" src="img/logo.png" alt="">
+            </aside>
+
+            <p class="tjustify">Avec plus de 2500m², Univers Jardin est la plus grande jardinerie et de décoration de Sainte-Maxime.<br>
             <br>
             Vous y trouverez le plus grand choix de mobilier, piscine, SPA, décorations et aménagements pour votre jardin.<br>
             La meilleure qualité et à tous les prix afin de satisfaire toutes les budgets.</p>
+          </div>
         </section>
 
-        <section class="regular">
+        <!-- ############## Video ############### -->
+        <div class="video">
           <video width="800" height="450" src="video/univers-jardin.mp4" muted autoplay loop poster="posterimage.jpg"></video>
-        </section>
+        </div>
 
-        <section>
-          <article><a href="produits.html"><img class="MobImg" src="img/salons/salon-anthracite.jpg" alt=""></a></article>
-          <article><a href="produits.html"><img class="MobImg" src="img/abri/abri-europa.jpg" alt=""></a></article>
-          <article><a href="produits.html"><img class="MobImg" src="img/piscine/piscine-horsol-bois.jpg" alt=""></a></article>
+        <!-- ############## Articles ############### -->
+        <section class="article">
+          <h3>Notre sélection</h3>
+          <div class="flex mobilArticles">
+            <article><a href="produits.html"><img class="MobImg" src="img/salons/salon-anthracite.jpg" alt=""></a><br>
+              <p class="tCenter"><strong>Salon Anthracite - 155 €</strong><br> Ensemble composé de 2 fauteuils,<br> 1 canapé et 1 table basse </p>
+            </article>
+
+            <article><a href="produits.html"><img class="MobImg" src="img/abri/abri-europa.jpg" alt=""></a>
+              <p class="tCenter"><strong>Abri de jardin Europa - 1395 €</strong><br> 4.93m² </p>
+            </article>
+
+            <article><a href="produits.html"><img class="MobImg" src="img/piscine/piscine-horsol-bois.jpg" alt=""></a>
+              <p class="tCenter"><strong>Piscine hors sol en bois - 3999  €</strong><br> L.3,5m x l.3,5m x H.1,2m </p>
+            </article>
+
+          </div>
         </section>
   </main>
 <!-- ############## End Main part ############### -->
@@ -116,22 +132,23 @@
 
 
 <!-- ############## Start Footer part ############### -->
-  <footer class="RegularFlex">
-    <section class="CONTACT">
-      <h3>CONTACT</h3>
-    <p>Univers Jardin <br>
-    18 Avenue du Général Leclerc <br>
-    83120 Sainte-Maxime</p>
-    </section>
+  <footer>
+    <section class="flex flexCenter">
+      <div>
+        <h3>CONTACT</h3>
+        <p>Univers Jardin <br>
+        18 Avenue du Général Leclerc <br>
+        83120 Sainte-Maxime</p>
+      </div>
 
-    <section class="HEURES">
-      <h3>HEURES D'OUVERTURE</h3>
-      <p>Ouvert du <br>
-      lundi au samedi <br>
-      de 09h00 à 19h00</p>
+      <div>
+        <h3>HEURES D'OUVERTURE</h3>
+        <p>Ouvert du <br>
+        lundi au samedi <br>
+        de 09h00 à 19h00</p>
+      </div>
     </section>
-
-    <div class="">
+    <div class="flex">
       <img class="icon" src="img/cb.jpg" alt=""> <img class="icon" src="img/mastercard.jpg" alt=""> <img class="icon" src="img/visa.jpg" alt="">
     </div>
   </footer>
