Responsive 1280px for index.html

--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
 
 <!-- ############## Start Header part ############### -->
   <header>
+
+
     <!-- ############## Insert Navigation mobile ############### -->
+    <!-- ############## Insert title ############### -->
     <h1>Univers Jardin</h1>
 
-    <nav class="flex" id="NavMobile">
+    <nav class="flex NavMobile">
       <img class="icon burger" src="img/burger.png" alt="">
       <ul>
         <li><a href="index.html">Accueil</a></li>
@@ -64,10 +67,9 @@
         <input type="text" name="q" id="search-input"><img src="img/magnifier.png" alt="search">
       </aside>
     </nav>
-    <!-- ############## Insert title ############### -->
 
     <!-- ############## Insert Navigation regular ############### -->
-    <nav id="NavRegular">
+    <nav class="NavRegular">
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="produits.html">Mobilier</a></li>
@@ -91,16 +93,14 @@
 
     <!-- ############## Bienvenue ############### -->
         <section>
-          <div>
             <aside>
-            <img class="logo" src="img/logo.png" alt="">
+              <img class="logo" src="img/logo.png" alt="">
             </aside>
 
             <p class="tjustify">Avec plus de 2500m², Univers Jardin est la plus grande jardinerie et de décoration de Sainte-Maxime.<br>
-            <br>
-            Vous y trouverez le plus grand choix de mobilier, piscine, SPA, décorations et aménagements pour votre jardin.<br>
-            La meilleure qualité et à tous les prix afin de satisfaire toutes les budgets.</p>
-          </div>
+              <br>
+              Vous y trouverez le plus grand choix de mobilier, piscine, SPA, décorations et aménagements pour votre jardin.<br>
+              La meilleure qualité et à tous les prix afin de satisfaire toutes les budgets.</p>
         </section>
 
         <!-- ############## Video ############### -->
@@ -110,8 +110,8 @@
 
         <!-- ############## Articles ############### -->
         <section class="article">
-          <h3>Notre sélection</h3>
-          <div class="flex mobilArticles">
+          <h3 class="tCenter">Notre sélection</h3>
+          <div class="flexmobil">
             <article><a href="produits.html"><img class="MobImg" src="img/salons/salon-anthracite.jpg" alt=""></a><br>
               <p class="tCenter"><strong>Salon Anthracite - 155 €</strong><br> Ensemble composé de 2 fauteuils,<br> 1 canapé et 1 table basse </p>
             </article>
