--- a/index.html
+++ b/index.html
@@ -43,46 +43,29 @@
 ###################################################################################################
 -->
 
-
-
 <!-- ############## Start Header part ############### -->
   <header>
-
-
-    <!-- ############## Insert Navigation mobile ############### -->
-    <!-- ############## Insert title ############### -->
+<!-- ############## Insert Navigation mobile ############### -->
+<!-- ############## Insert title ############### -->
     <h1>Univers Jardin</h1>
-
-    <nav class="flex NavMobile">
-      <img class="icon burger" src="img/burger.png" alt="">
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="produits.html">Mobilier</a></li>
-        <li><a href="produits.html">Amenagement</a></li>
-        <li><a href="produits.html">Piscines & SPA</a></li>
-        <li><a href="produits.html">Décorations</a></li>
-        <li><a href="contact.html">Informations & Contact</a></li>
-      </ul>
+<!-- ############## Insert Navigation ############### -->
+    <div class="flex spaceBetween">
+      <button type="submit" name="button">Menu hamburger</button>
+      <nav>
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="produits.html">Mobilier</a></li>
+          <li><a href="produits.html">Amenagement</a></li>
+          <li><a href="produits.html">Piscines & SPA</a></li>
+          <li><a href="produits.html">Décorations</a></li>
+          <li><a href="contact.html">Informations & Contact</a></li>
+        </ul>
+      </nav>
       <aside>
-        <input type="text" name="q" id="search-input"><img src="img/magnifier.png" alt="search">
+        <input class="search" type="text" name="q" id="search-input">
+        <img src="img/magnifier.png" alt="search">
       </aside>
-    </nav>
-
-    <!-- ############## Insert Navigation regular ############### -->
-    <nav class="NavRegular">
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="produits.html">Mobilier</a></li>
-        <li><a href="produits.html">Amenagement</a></li>
-        <li><a href="produits.html">Piscines & SPA</a></li>
-        <li><a href="produits.html">Décorations</a></li>
-        <li><a href="contact.html">Informations & Contact</a></li>
-      </ul>
-      <aside>
-        <input type="text" name="q" id="search-input"> <img src="img/magnifier.png" alt="search">
-      </aside>
-    </nav>
-
+    </div>
   </header>
 <!-- ############## End Header part ############### -->
 
@@ -90,42 +73,50 @@
 
 <!-- ############## Start Main part ############### -->
   <main>
+<!-- ############## Bienvenue ############### -->
+    <aside>
+      <img class="logo" src="img/logo.png" alt="">
+    </aside>
+    <section>
+      <p class="tJustify">Avec plus de 2500m², Univers Jardin est la plus grande jardinerie et de décoration de Sainte-Maxime.<br>
+      <br>
+      Vous y trouverez le plus grand choix de mobilier, piscine, SPA, décorations et aménagements pour votre jardin.<br>
+      La meilleure qualité et à tous les prix afin de satisfaire toutes les budgets.</p>
+    </section>
+<!-- ############## Video ############### -->
+    <div>
+      <video width="800" height="450" src="video/univers-jardin.mp4" muted autoplay loop poster="posterimage.jpg"></video>
+    </div>
+<!-- ############## Articles ############### -->
+    <section class="tCenter">
+      <h3>Notre sélection</h3>
+        <article>
+          <a href="produits.html">
+            <img class="img" src="img/salons/salon-anthracite.jpg" alt="">
+          </a>
+          <p class="tCenter"><strong>Salon Anthracite - 155 €</strong><br>
+            Ensemble composé de 2 fauteuils,<br> 1 canapé et 1 table basse
+          </p>
+        </article>
 
-    <!-- ############## Bienvenue ############### -->
-        <section>
-            <aside>
-              <img class="logo" src="img/logo.png" alt="">
-            </aside>
+        <article>
+          <a href="produits.html">
+            <img class="img" src="img/abri/abri-europa.jpg" alt="">
+          </a>
+          <p class="tCenter"><strong>Abri de jardin Europa - 1395 €</strong><br>
+            4.93m²
+          </p>
+        </article>
 
-            <p class="tjustify">Avec plus de 2500m², Univers Jardin est la plus grande jardinerie et de décoration de Sainte-Maxime.<br>
-              <br>
-              Vous y trouverez le plus grand choix de mobilier, piscine, SPA, décorations et aménagements pour votre jardin.<br>
-              La meilleure qualité et à tous les prix afin de satisfaire toutes les budgets.</p>
-        </section>
-
-        <!-- ############## Video ############### -->
-        <div class="video">
-          <video width="800" height="450" src="video/univers-jardin.mp4" muted autoplay loop poster="posterimage.jpg"></video>
-        </div>
-
-        <!-- ############## Articles ############### -->
-        <section class="article">
-          <h3 class="tCenter">Notre sélection</h3>
-          <div class="flexmobil">
-            <article><a href="produits.html"><img class="MobImg" src="img/salons/salon-anthracite.jpg" alt=""></a><br>
-              <p class="tCenter"><strong>Salon Anthracite - 155 €</strong><br> Ensemble composé de 2 fauteuils,<br> 1 canapé et 1 table basse </p>
-            </article>
-
-            <article><a href="produits.html"><img class="MobImg" src="img/abri/abri-europa.jpg" alt=""></a>
-              <p class="tCenter"><strong>Abri de jardin Europa - 1395 €</strong><br> 4.93m² </p>
-            </article>
-
-            <article><a href="produits.html"><img class="MobImg" src="img/piscine/piscine-horsol-bois.jpg" alt=""></a>
-              <p class="tCenter"><strong>Piscine hors sol en bois - 3999  €</strong><br> L.3,5m x l.3,5m x H.1,2m </p>
-            </article>
-
-          </div>
-        </section>
+        <article>
+          <a href="produits.html">
+            <img class="img" src="img/piscine/piscine-horsol-bois.jpg" alt="">
+          </a>
+          <p><strong>Piscine hors sol en bois - 3999  €</strong><br>
+            L.3,5m x l.3,5m x H.1,2m
+          </p>
+        </article>
+    </section>
   </main>
 <!-- ############## End Main part ############### -->
 
@@ -133,7 +124,7 @@
 
 <!-- ############## Start Footer part ############### -->
   <footer>
-    <section class="flex flexCenter">
+    <section class="tCenter">
       <div>
         <h3>CONTACT</h3>
         <p>Univers Jardin <br>
@@ -148,8 +139,10 @@
         de 09h00 à 19h00</p>
       </div>
     </section>
-    <div class="flex">
-      <img class="icon" src="img/cb.jpg" alt=""> <img class="icon" src="img/mastercard.jpg" alt=""> <img class="icon" src="img/visa.jpg" alt="">
+    <div class="flex flexCenter spaceAround">
+      <img class="icon" src="img/cb-icon.jpg" alt="">
+      <img class="icon" src="img/mastercard-icon.jpg" alt="">
+      <img class="icon" src="img/visa-icon.jpg" alt="">
     </div>
   </footer>
 <!-- ############## End Footer part ############### -->
