Adjusments html and css produits.html

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
   <header>
 <!-- ############## Insert Navigation mobile ############### -->
 <!-- ############## Insert title ############### -->
-    <section class="flex blocCenter">
+    <section class="flex flexCenter blocCenter">
       <aside class="tCenter">
         <img class="logo" src="img/logo.png" alt="">
       </aside>
       <h1>Univers Jardin</h1>
     </section>
 <!-- ############## Insert Navigation ############### -->
-    <div class="flex spaceBetween">
+    <div class="flex flexCenter spaceBetween">
       <button type="submit" name="button">Menu hamburger</button>
       <nav>
         <ul>
@@ -61,7 +61,7 @@
       </nav>
       <aside class="flexCenter">
         <input class="search" type="text" name="q" id="search-input">
-        <img src="img/magnifier.png" alt="search">
+        <img class="icon" src="img/magnifier.png" alt="search">
       </aside>
     </div>
   </header>
@@ -89,13 +89,13 @@
 <!-- ############## Articles ############### -->
     <section class="tCenter">
       <h3>Notre sélection</h3>
-      <div class="flex" id="RegularArticle">
+      <div id="RegularArticle">
         <article>
           <a href="produits.html">
             <img class="img" src="img/salons/salon-anthracite.jpg" alt="">
           </a>
-          <h4>Salon Anthracite</h4>
-          <p><strong>155 €</strong><br>
+          <p><u>Salon Anthracite</u>
+          <strong><h4>155 €</h4></strong><br>
             Ensemble composé de 2 fauteuils,<br> 1 canapé et 1 table basse
           </p>
         </article>
@@ -104,8 +104,8 @@
           <a href="produits.html">
             <img class="img" src="img/abri/abri-europa.jpg" alt="">
           </a>
-          <h4>Abri de jardin Europa</h4>
-          <p><strong>1395 €</strong><br>
+          <p><u>Abri de jardin Europa</u>
+          <strong><h4>1395 €</h4></strong><br>
             4.93m²</p>
         </article>
 
@@ -113,8 +113,8 @@
           <a href="produits.html">
             <img class="img" src="img/piscine/piscine-horsol-bois.jpg" alt="">
           </a>
-          <h4>Piscine hors sol en bois</h4>
-          <p><strong>3999  €</strong><br>
+          <p><u>Piscine hors sol en bois</u>
+          <strong><h4>3999  €</h4></strong><br>
             L.3,5m x l.3,5m x H.1,2m</p>
         </article>
       </div>
