--- a/produits.html
+++ b/produits.html
@@ -47,22 +47,32 @@
 
 <!-- ############## Start Header part ############### -->
   <header>
-
-    <!-- ############## Insert Navigation ############### -->
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="produits.html">Mobilier</a></li>
-        <li><a href="produits.html">Amenagement</a></li>
-        <li><a href="produits.html">Piscines & SPA</a></li>
-        <li><a href="produits.html">Décorations</a></li>
-        <li><a href="contact.html">Informations & Contact</a></li>
-      </ul>
-      <aside class="">
-        <input type="text" name="q" id="search-input"> <img src="img/magnifier.png" alt="search">
+<!-- ############## Insert Navigation mobile ############### -->
+<!-- ############## Insert title ############### -->
+    <section class="flex flexCenter blocCenter">
+      <aside class="tCenter">
+        <img class="logo" src="img/logo.png" alt="">
       </aside>
-    </nav>
-
+      <h1>Univers Jardin</h1>
+    </section>
+<!-- ############## Insert Navigation ############### -->
+    <div class="flex flexCenter spaceBetween">
+      <button type="submit" name="button">Menu hamburger</button>
+      <nav>
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="produits.html">Mobilier</a></li>
+          <li><a href="produits.html">Amenagement</a></li>
+          <li><a href="produits.html">Piscines & SPA</a></li>
+          <li><a href="produits.html">Décorations</a></li>
+          <li><a href="contact.html">Informations & Contact</a></li>
+        </ul>
+      </nav>
+      <aside class="flexCenter">
+        <input class="search" type="text" name="q" id="search-input">
+        <img class="icon" src="img/magnifier.png" alt="search">
+      </aside>
+    </div>
   </header>
 <!-- ############## End Header part ############### -->
 
@@ -73,32 +83,34 @@
 
     <!-- ############## Bienvenue ############### -->
 
-    <section>
+    <section class="tCenter">
       <h2>Salons de jardin</h2>
-      <article><a href="produits.html"><img src="img/salons/salon-anthracite.jpg" alt=""></a></article>
-      <article><a href="produits.html"><img src="img/salons/salon-isa.jpg" alt=""></a></article>
-      <article><a href="produits.html"><img src="img/salons/canape-palmbeach.jpg" alt=""></a></article>
-    </section>
+      <div class="flex">
+        <article><a href="produits.html"><img src="img/salons/salon-anthracite.jpg" alt=""></a></article>
+        <article><a href="produits.html"><img src="img/salons/salon-isa.jpg" alt=""></a></article>
+        <article><a href="produits.html"><img src="img/salons/canape-palmbeach.jpg" alt=""></a></article>
+      </div>
 
-    <section>
       <h2>Abris de jardin</h2>
-      <article><a href="produits.html"><img src="img/abri/abri-europa.jpg" alt=""></a></article>
-      <article><a href="produits.html"><img src="img/abri/armoire-helka.jpg" alt=""></a></article>
-      <article><a href="produits.html"><img src="img/abri/kiosque-villaverde.jpg" alt=""></a></article>
-    </section>
+      <div class="flex">
+        <article><a href="produits.html"><img src="img/abri/abri-europa.jpg" alt=""></a></article>
+        <article><a href="produits.html"><img src="img/abri/armoire-helka.jpg" alt=""></a></article>
+        <article><a href="produits.html"><img src="img/abri/kiosque-villaverde.jpg" alt=""></a></article>
+      </div>
 
-    <section>
       <h2>Les piscines & SPA</h2>
-      <article><a href="produits.html"><img src="img/piscine/piscine-horsol-bois.jpg" alt=""></a></article>
-      <article><a href="produits.html"><img src="img/piscine/piscine-bois-gm.jpg" alt=""></a></article>
-      <article><a href="produits.html"><img src="img/spa/tente-spa.jpg" alt=""></a></article>
-    </section>
+      <div class="flex">
+        <article><a href="produits.html"><img src="img/piscine/piscine-horsol-bois.jpg" alt=""></a></article>
+        <article><a href="produits.html"><img src="img/piscine/piscine-bois-gm.jpg" alt=""></a></article>
+        <article><a href="produits.html"><img src="img/spa/tente-spa.jpg" alt=""></a></article>
+      </div>
 
-    <section>
       <h2>Fontaines & décorations</h2>
-      <article><a href="produits.html"><img src="img/fontaine/fontaine-arezzo.jpg" alt=""></a></article>
-      <article><a href="produits.html"><img src="img/fontaine/fontaine-galia.jpg" alt=""></a></article>
-      <article><a href="produits.html"><img src="img/deco/pergola-florence.jpg" alt=""></a></article>
+      <div class="flex">
+        <article><a href="produits.html"><img src="img/fontaine/fontaine-arezzo.jpg" alt=""></a></article>
+        <article><a href="produits.html"><img src="img/fontaine/fontaine-galia.jpg" alt=""></a></article>
+        <article><a href="produits.html"><img src="img/deco/pergola-florence.jpg" alt=""></a></article>
+      </div>
     </section>
 
 
